# gymbird

./: README.md  TODO.md
backend/: .gitignore  Cargo.toml
backend/src/: database.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  user.rs  util.rs
backend/src/database/: exercise.rs  mod.rs  user.rs
backend/src/database/sql/: exercise_table.sql  session_token_table.sql  user_table.sql  workout_table.sql
backend/src/fitness/: workout.rs
frontend/: .gitignore  data.ts  package-lock.json  package.json  store.ts  types.ts  util.ts
frontend/components/: Exercise.tsx  ExerciseSelectionModal.tsx  LoginModal.tsx  Navbar.tsx  RegistrationModal.tsx
frontend/pages/: _app.tsx  exercises.tsx  index.tsx  workout.tsx
frontend/styles/: Exercise.module.css  ExerciseSelectionModal.module.css  Exercises.module.css  Home.module.css  LoginModal.module.css  Navbar.module.css  RegistrationModal.module.css  globals.css
scripts/: backgroundRemover.ts  cut-in-half.py  fetcher.ts  image-to-name.ts
