[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
serde_json = "1.0"
anyhow = "1.0.64"

[dependencies.serde]
version = "1.0.144"
features = ["derive"]
default-features = false

[dependencies.tokio-postgres]
version = "0.7.7"
features = ["with-chrono-0_4", "with-serde_json-1"]

[dependencies.tokio]
version = "1.21.0"
features = ["full"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.uuid]
version = "1.1.2"
features = ["v4", "fast-rng"]
